# miappe_packaging

./: .pre-commit-config.yaml  FOAF.json  Makefile  README.md  WhiteHouse.json  example.py  mkdocs.yml  people.json  pyproject.toml  roadmap.md
appnlib/core/: __init__.py  dataclass.py  exceptions.py  graph.py  schema.py  struct.py  types.py  utils.py  validator.py
docs/: about.md  graph.md  schema.md  struct.md  utils.md
docs/examples/: quick_start.py
src/miappe_packaging/: base.py  converter.py  exceptions.py  graph.py  json.py  registry.py  schema.py  struct.py  types.py  utils.py
tests/: fixture.py  test_dataclass.py  test_graph.py  test_schema.py  test_utils.py  test_validator.py
tests/example_tests/: test_quickstart.py
