[project]
name = "miappe_packaging"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "harryle", email = "lehoangsonsg@gmail.com"},
]
dependencies = [
    "rdflib>=7.0.0",
    "msgspec>=0.18.6",
    "pydantic>=2.9.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
jupyter = [
    "ipykernel>=6.29.5",
]
test = [
    "pytest>=8.3.2",
]
