[project]
name = "miappe_packaging"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "harryle", email = "lehoangsonsg@gmail.com" }]
dependencies = ["rdflib>=7.0.0", "msgspec>=0.18.6"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
jupyter = ["ipykernel>=6.29.5"]
test = ["pytest>=8.3.2", "pytest-cov>=5.0.0"]
analysis = ["pre-commit>=3.8.0", "ruff>=0.6.4", "mypy>=1.11.2"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.34",
    "mkdocstrings-python==1.11",
    "markdown-exec>=1.9.3",
    "mkdocs-version-annotations>=1.0.0",
    "mkdocs-autorefs>=1.2.0",
]

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
omit = ["*/tests/*"]
parallel = true
source = ["appnlib"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "@(abc\\.)?abstractmethod",
    "def __getattr__",
    "if TYPE_CHECKING:",
]

[tool.mypy]
packages = ["appnlib", "tests"]
python_version = "3.11"

disallow_any_generics = false
disallow_untyped_decorators = true
disallow_untyped_calls = true
enable_error_code = "ignore-without-code"
implicit_reexport = false
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
